css/about.scss
#siteorigin-about-page {

	.about-container {
		box-sizing: border-box;
		max-width: 640px;
		margin: 0 auto;
		position: relative;
	}

	.about-header {
		background-color: #eaeaea;
		margin: -10px -22px 20px -22px;
		padding: 20px;
		border-bottom: 1px solid #d0d0d0;
		text-align: center;

		h1 {
			font-weight: 300;
			font-size: 26px;
			line-height: 1em;
		}

		.version {
			font-weight: 300;
			display: inline-block;
			font-size: 12px;
			position: relative;
			padding: 3px 5px;
			background: #fff;
			line-height: 1em;
			margin-left: 5px;
			color: #0073aa;
			border-radius: 2px;
			top: -1.25em;
		}

	}

	.about-video {
		background-color: #f4f4f4;
		margin: -20px -22px 20px -22px;
		padding: 30px 22px;

		margin-bottom: 30px;
		border-bottom: 1px solid #e0e0e0;

		.about-play-video {
			top: 0;
			left: 0;
			width: 640px;
			height: 360px;
			position: absolute;
			z-index: 2;
			display: block;

			svg {
				position: absolute;
				bottom: 15px;
				left: 20px;
				width: 80px;

				.st0{
					opacity:0.5;
					fill: #000000;
				}

				.st1{
					fill:#FFFFFF;
				}
			}

			&:hover {
				svg {
					.st0 {
						opacity: 0.75;
						fill: #09adef;
					}
				}
			}
		}

		.about-video-images {
			width: 640px;
			height: 360px;
			display: block;

			img {
				top: 0;
				left: 0;
				width: 640px;
				height: 360px;
				position: absolute;
			}
		}

		.about-video-description {
			text-align: center;
			margin-top: 25px;
		}

		.about-share {
			text-align: center;
			margin-top: 20px;

			.about-share-title {
				font-size: 0.9em;
				line-height: 1em;
				margin-bottom: 0.75em;
				font-weight: bold;
			}

			a {
				display: inline-block;
				text-decoration: none;
				border-radius: 3px;
				margin-left: 2px;
				padding: 5px;

				&.about-share-facebook {
					background: #4d70a8;

					&:hover {
						background: #5577af;
					}
				}

				&.about-share-twitter {
					background: #00bbf2;

					&:hover {
						background: #25c4fb;
					}
				}

				&.about-share-googleplus {
					background: #e3401d;

					&:hover {
						background: #ec4a23;
					}
				}

				.dashicons {
					color: #fff;
					font-size: 18px;
					width: 18px;
					height: 18px;
				}
			}
		}
	}

	.about-sections {

		.about-section {
			border-radius: 2px;
			background: #fafafa;
			padding: 30px 20px;
			border: 1px solid #d8d8d8;
			margin-bottom: 25px;

			> *:first-child {
				margin-top: 0;
			}

			> *:last-child {
				margin-bottom: 0;
			}
		}

	}

	.about-siteorigin-logo{
		margin-top: 60px;
		text-align: center;

		p {
			line-height: 1em;
			font-size: 0.7em;
			color: #999;
			margin-bottom: 8px;
		}
		
		img {
			opacity: 0.75;
			height: 26px;
			width: auto;
		}
	}

}

